--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ ACCESS_TOKEN_SECRET = Access_Token_Secret_#$%_ExpressJS_Authentication
 ACCESS_REFRESHTOKEN_SECRET = Refresh_Token_Secret_#$%_ExpressJS_Authentication
 ACCESS_TOKEN_LIFE = 10m
 ACCESS_REFRESHTOKEN_LIFE = 3650d
+
+#DATABASE
+DB_URL = mongodb+srv://quochuy01:Lequochuy050401@cluster0.rf44c8j.mongodb.net/EcommerceAPI-dev?retryWrites=true&w=majority
+
